fixing height on landscape view on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400");
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     background: url("images/background.png") center no-repeat;
     background-size: cover;
